[package]
name = "zquery"
version = "0.1.0"
authors = ["Szallo Laszlo <szallol@gmail.com>"]
edition = "2018"

description = "command line query tool(SQL) for differrent data sources and destinations"

[[bin]]
name = "zq"
path = "src/main.rs"

[dependencies]
clap = "2.33.0"
rusqlite = {  version = "0.21.0" , features = ["bundled"] }
url = "2.1.0"
log = "0.4.8"
env_logger = "0.7.1"
failure = "0.1.6"
xml-rs = "0.8.0"
csv = "1.1.1"
