[package]
name = "zquery-cli"
version = "0.1.0"
authors = ["Szallo Laszlo <szallol@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

description = "command line query tool(SQL) for differrent data sources and destinations"

[[bin]]
name = "zq"
path = "src/main.rs"

[dependencies]
zquery-core = { path = "../zquery-core"}
clap = "2.33.0"
log = "0.4.8"
simple_logger = "1.4.0"
anyhow = "1.0"
