[package]
name = "zquery-core"
version = "0.1.0"
authors = ["Szallo Laszlo <szallol@gmail.com>"]
edition = "2018"

[dependencies]
thiserror = "1.0"
rusqlite = {  version = "0.24.0" , features = ["bundled"] }
xml-rs = "0.8.0"
csv = "1.1.2"
serde = { version = "1.0", features = ["derive"] }
url = { version = "2", features = ["serde"] }
